Change of game list and chanel name

--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>H2O</title>
 </head>
+
 <body>
     <nav>
-        <div class="logo">Game Space</div>
+        <div class="logo">H2O</div>
         <div class="menu"></div>
     </nav>
+
     <main>
         <section>
-            <header>Tom Clancy's Rainbow Six Sege</header>
-            <article>test</article>
+            <header>Tom Clancy's Rainbow Six Siege</header>
+            <article>under cunstuction</article>
         </section>
+
         <section>
-            <header>Pay Day 2</header>
-            <article>text</article>
+            <header>Escape from Tarkov</header>
+            <article>under cunstuction</article>
         </section>
+
         <section>
-            <header>Paladins</header>
-            <article>text2</article>
+            <header>GTA 5 RP</header>
+            <article>under cunstuction</article>
         </section>
-        <section>
-            <header>Warface</header>
-            <article>text3</article>
-        </section>
+
     </main>
     <footer><h3>Your hurt is myne</h3></footer>
 </body>
+
 </html>
